// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarGroupRenderer snapshot (T-0009-086) — expressive×health matches snapshot at expressive×health 1`] = `
<View
  accessibilityLabel="3 people: Alex, Sam, Jordan"
  accessibilityRole="text"
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <View
    accessibilityElementsHidden={true}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#4A743826",
        "borderColor": "#FBF8F3",
        "borderRadius": 9999,
        "borderWidth": 2,
        "height": 32,
        "justifyContent": "center",
        "marginRight": -3,
        "width": 32,
        "zIndex": 3,
      }
    }
  >
    <Text
      style={
        {
          "color": "#4A7438",
          "fontSize": 12,
          "fontWeight": "600",
          "includeFontPadding": false,
          "lineHeight": 28,
          "textAlignVertical": "center",
        }
      }
    >
      AL
    </Text>
  </View>
  <View
    accessibilityElementsHidden={true}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#4A743826",
        "borderColor": "#FBF8F3",
        "borderRadius": 9999,
        "borderWidth": 2,
        "height": 32,
        "justifyContent": "center",
        "marginRight": -3,
        "width": 32,
        "zIndex": 2,
      }
    }
  >
    <Text
      style={
        {
          "color": "#4A7438",
          "fontSize": 12,
          "fontWeight": "600",
          "includeFontPadding": false,
          "lineHeight": 28,
          "textAlignVertical": "center",
        }
      }
    >
      SA
    </Text>
  </View>
  <View
    accessibilityElementsHidden={true}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#4A743826",
        "borderColor": "#FBF8F3",
        "borderRadius": 9999,
        "borderWidth": 2,
        "height": 32,
        "justifyContent": "center",
        "marginRight": 0,
        "width": 32,
        "zIndex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "#4A7438",
          "fontSize": 12,
          "fontWeight": "600",
          "includeFontPadding": false,
          "lineHeight": 28,
          "textAlignVertical": "center",
        }
      }
    >
      JO
    </Text>
  </View>
</View>
`;

exports[`AvatarGroupRenderer snapshot (T-0009-086) — productive×focus matches snapshot at productive×focus 1`] = `
<View
  accessibilityLabel="3 people: Alex, Sam, Jordan"
  accessibilityRole="text"
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <View
    accessibilityElementsHidden={true}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#4F46E526",
        "borderColor": "#FAFAF7",
        "borderRadius": 9999,
        "borderWidth": 2,
        "height": 24,
        "justifyContent": "center",
        "marginRight": -6,
        "width": 24,
        "zIndex": 3,
      }
    }
  >
    <Text
      style={
        {
          "color": "#4F46E5",
          "fontSize": 9,
          "fontWeight": "600",
          "includeFontPadding": false,
          "lineHeight": 20,
          "textAlignVertical": "center",
        }
      }
    >
      AL
    </Text>
  </View>
  <View
    accessibilityElementsHidden={true}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#4F46E526",
        "borderColor": "#FAFAF7",
        "borderRadius": 9999,
        "borderWidth": 2,
        "height": 24,
        "justifyContent": "center",
        "marginRight": -6,
        "width": 24,
        "zIndex": 2,
      }
    }
  >
    <Text
      style={
        {
          "color": "#4F46E5",
          "fontSize": 9,
          "fontWeight": "600",
          "includeFontPadding": false,
          "lineHeight": 20,
          "textAlignVertical": "center",
        }
      }
    >
      SA
    </Text>
  </View>
  <View
    accessibilityElementsHidden={true}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#4F46E526",
        "borderColor": "#FAFAF7",
        "borderRadius": 9999,
        "borderWidth": 2,
        "height": 24,
        "justifyContent": "center",
        "marginRight": 0,
        "width": 24,
        "zIndex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "#4F46E5",
          "fontSize": 9,
          "fontWeight": "600",
          "includeFontPadding": false,
          "lineHeight": 20,
          "textAlignVertical": "center",
        }
      }
    >
      JO
    </Text>
  </View>
</View>
`;
